package com.timothymarias.cookingapp.shared.domain.model

data class Recipe(
    val localId: String,
    val name: String
)